spacing on front page fixed

--- a/style.scss
+++ b/style.scss
@@ -224,7 +224,7 @@ $red-clr: orangered;
       top: 58%;
     }
     @media screen and (max-width: 350px) {
-      top: 56.5%;
+      top: 56.6%;
     }
     .sub-title {
       color: #fff;
